debug mobile logo animation

--- a/styles.css
+++ b/styles.css
@@ -4760,13 +4760,13 @@ h1, h2, h3, h4 {
   .logo-v-separate {
     width: 117px;
     height: 125px;
-    left: 0;
+    left: 10px;
     animation: vSlideInFromLeft 0.5s ease-in-out 0s forwards, vShiftToOverlap 0.4s ease-in-out 0.8s forwards, vShiftToOverlapFinal 0.4s ease-in-out 1.4s forwards, vFadeOut 0.3s ease-in-out 2.0s forwards;
   }
   .logo-1-separate {
     width: 117px;
     height: 125px;
-    right: 0;
+    right: 10px;
     animation: oneSlideInFromRight 0.5s ease-in-out 0s forwards, oneShiftToOverlap 0.4s ease-in-out 0.8s forwards, oneShiftToOverlapFinal 0.4s ease-in-out 1.4s forwards, oneFadeOut 0.3s ease-in-out 2.0s forwards;
   }
   .logo-final {
@@ -4806,13 +4806,13 @@ h1, h2, h3, h4 {
   .logo-v-separate {
     width: 93px;
     height: 100px;
-    left: 0;
+    left: 8px;
     animation: vSlideInFromLeft 0.5s ease-in-out 0s forwards, vShiftToOverlap 0.4s ease-in-out 0.8s forwards, vShiftToOverlapFinal 0.4s ease-in-out 1.4s forwards, vFadeOut 0.3s ease-in-out 2.0s forwards;
   }
   .logo-1-separate {
     width: 93px;
     height: 100px;
-    right: 0;
+    right: 8px;
     animation: oneSlideInFromRight 0.5s ease-in-out 0s forwards, oneShiftToOverlap 0.4s ease-in-out 0.8s forwards, oneShiftToOverlapFinal 0.4s ease-in-out 1.4s forwards, oneFadeOut 0.3s ease-in-out 2.0s forwards;
   }
   .logo-final {
