--- a/styles.css
+++ b/styles.css
@@ -4761,12 +4761,14 @@ h1, h2, h3, h4 {
     width: 117px;
     height: 125px;
     left: 10px;
+    z-index: 2;
     animation: vSlideInFromLeft 0.5s ease-in-out 0s forwards, vShiftToOverlapFinal 0.4s ease-in-out 1.4s forwards, vFadeOut 0.3s ease-in-out 2.0s forwards;
   }
   .logo-1-separate {
     width: 117px;
     height: 125px;
     right: 10px;
+    z-index: 1;
     animation: oneSlideInFromRight 0.5s ease-in-out 0s forwards, oneShiftToOverlapFinal 0.4s ease-in-out 1.4s forwards, oneFadeOut 0.3s ease-in-out 2.0s forwards;
   }
   .logo-final {
@@ -4799,12 +4801,14 @@ h1, h2, h3, h4 {
     width: 93px;
     height: 100px;
     left: 8px;
+    z-index: 2;
     animation: vSlideInFromLeft 0.5s ease-in-out 0s forwards, vShiftToOverlapFinal 0.4s ease-in-out 1.4s forwards, vFadeOut 0.3s ease-in-out 2.0s forwards;
   }
   .logo-1-separate {
     width: 93px;
     height: 100px;
     right: 8px;
+    z-index: 1;
     animation: oneSlideInFromRight 0.5s ease-in-out 0s forwards, oneShiftToOverlapFinal 0.4s ease-in-out 1.4s forwards, oneFadeOut 0.3s ease-in-out 2.0s forwards;
   }
   .logo-final {
